[package]
name = "hexboltmq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hexbolt"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tonic = "0.12.2"
hyper = "0.14"
log = "0.4"
env_logger = "0.11.5"
uuid = { version = "1", features = ["v4"] }
